SERVER-12481 fix off-by-one error with IndexBuildsInProgress::remove